--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -2,28 +2,28 @@
 
 // インナー幅設定
 // コンテンツのインナー幅（最も共通の幅が多い部分）
-$inner: 1100px;
+$inner: 1080px;
 // ※キュンパス幅ではなくインナーの幅を指す
 
 // 余白
 $padding-pc: 25px;
-$padding-sp: 20px;
+$padding-sp: 15px;
 
 ////////////////////
 // フォント設定
 ////////////////////
 
-$base-font-family: "";
-$second-font-family: "";
-// ※検証ツールでしっかり反映されているか確認する
+$base-font-family: "Noto Sans JP", sans-serif;
+$second-font-family: "Gotu", sans-serif;
+$third-font-family: "Lato", sans-serif;
 
 body {
   font-family: $base-font-family;
 }
 
 // フォントウェイト
-$regular: 300;
-$normal: 400;
+$regular: 400;
+$medium: 500;
 $bold: 700;
 
 ////////////////////
@@ -31,5 +31,8 @@ $bold: 700;
 ////////////////////
 
 //色指定（共通性のあるものは出来る限り指定すると良い）
-$black: #111;
+$black: #000;
 $white: #fff;
+$c-main: #408f95;
+$c-font: #0d2936;
+$c-sub: #ddf0f1;
