--- a/src/sass/module/_information.scss
+++ b/src/sass/module/_information.scss
@@ -48,7 +48,6 @@
   font-size: rem(20);
   font-weight: $bold;
   line-height: calc(24 / 20);
-  // border-bottom: 1px solid $c-main;
   @include mq("md") {
     padding-bottom: rem(8);
     font-size: rem(24);
@@ -78,4 +77,14 @@
 .information__button {
   margin-top: rem(40);
   text-align: center;
+}
+
+img.is-show {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $c-main;
+  z-index: 2;
 }
