--- a/src/sass/module/_voice.scss
+++ b/src/sass/module/_voice.scss
@@ -5,7 +5,7 @@
   @include mq("md") {
     margin-top: rem(30);
     display: flex;
-    justify-content: space-between;
+    gap: rem(40);
   }
 }
 
