--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -10,6 +10,12 @@
 
 .campaign-card a {
   display: block;
+  overflow: hidden;
+  transition: opacity .3s;
+}
+
+.campaign-card a:hover {
+  opacity: $opacity;
 }
 
 .campaign-card__img {
