--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -23,7 +23,7 @@
   position: relative;
   width: rem(102);
   height: inherit;
-  z-index: 999;
+  z-index: 20;
   @include mq("md") {
     width: rem(133);
   }
@@ -33,6 +33,10 @@
   justify-content: center;
   align-items: center;
   height: inherit;
+  transition: opacity .3s;
+}
+.header__logo a:hover {
+  opacity: $opacity;
 }
 .header__logo img {
   width: 100%;
@@ -53,7 +57,7 @@
   width: rem(32);
   height: inherit;
   cursor: pointer;
-  z-index: 999;
+  z-index: 20;
   @include mq("md") {
     display: none;
   }
@@ -96,11 +100,11 @@
   right: -120%;
   width: 100%;
   height: 100vh;
-  padding: rem(104) rem(15) rem(104);
   background-color: $c-main;
   overflow-y: scroll;
+  overscroll-behavior: contain;
   transition: 0.6s;
-  z-index: 900;
+  z-index: 10;
   @include mq("md") {
     display: none;
   }
