--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -11,7 +11,7 @@
 .campaign-card a {
   display: block;
   overflow: hidden;
-  transition: opacity .3s;
+  transition: opacity 0.3s;
 }
 
 .campaign-card a:hover {
@@ -54,34 +54,26 @@
 .campaign-card__title {
   position: relative;
   margin-top: rem(4);
-  padding-bottom: rem(8);
+  padding-bottom: rem(7);
   color: $c-font;
   font-size: rem(16);
   font-weight: $medium;
   line-height: calc(24 / 16);
-}
-
-.campaign-card__title::after {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: $c-main;
-  border-radius: 3px;
+  border-bottom: rem(2) solid $c-main;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .campaign-card__text {
-  margin-top: rem(8);
+  margin-top: rem(7);
   color: $c-font;
   font-size: rem(14);
   font-weight: $regular;
   line-height: calc(24 / 14);
   text-align: center;
   @include mq("md") {
-    margin-top: rem(16);
+    margin-top: rem(15);
     padding-right: rem(18);
     font-size: rem(16);
     line-height: calc(24 / 16);
