--- a/src/sass/module/_loading.scss
+++ b/src/sass/module/_loading.scss
@@ -26,10 +26,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: vw(1440, 496);
+  width: vw(375, 248);
   aspect-ratio: 496 / 133;
   opacity: 0;
   animation: fadeLogo 2s forwards 0.5s;
+  @include mq("md") {
+    width: vw(1440, 496);
+  }
 }
 
 .loading__logo img {
@@ -56,8 +59,13 @@
 .loading__img {
   position: absolute;
   top: 0;
-  width: vw(1440, 720);
-  aspect-ratio: 720 / 768;
+  width: vw(375, 188);
+  min-height: 100vh;
+  aspect-ratio: 188 / 667;
+  @include mq("md") {
+    width: vw(1440, 720);
+    aspect-ratio: 720 / 768;
+  }
 }
 
 .loading__img-left {
@@ -70,6 +78,11 @@
   left: 50%;
   transform: translateY(calc(100% + rem(80)));
   animation: imgRight 5s forwards 2.6s;
+}
+
+.loading__img img {
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes imgLeft {
