--- a/src/sass/module/_voice.scss
+++ b/src/sass/module/_voice.scss
@@ -2,17 +2,12 @@
 
 .voice__items {
   margin-top: rem(44);
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: rem(40);
   @include mq("md") {
     margin-top: rem(30);
-    display: flex;
-    gap: rem(40);
-  }
-}
-
-.voice__item + .voice__item {
-  margin-top: rem(40);
-  @include mq("md") {
-    margin-top: 0;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
