--- a/src/sass/module/_sp-nav.scss
+++ b/src/sass/module/_sp-nav.scss
@@ -2,7 +2,7 @@
 
 .sp-nav {
   display: flex;
-  padding: rem(104) rem(15) rem(104);
+  padding: rem(92) rem(15) rem(104);
   height: calc(100% + 1px);
 }
 
@@ -12,13 +12,26 @@
 
 .sp-nav__item {
   position: relative;
-  padding-left: rem(22);
 }
 .sp-nav__item::before {
+}
+.sp-nav__item + .sp-nav__item {
+  margin-top: rem(16);
+}
+.sp-nav__item a {
+  position: relative;
+  display: block;
+  padding: rem(12) 0 rem(12) rem(22);
+  font-size: rem(16);
+  font-weight: $bold;
+  line-height: calc(18 / 16);
+  color: $white;
+}
+.sp-nav__item > a::before {
   content: "";
   display: block;
   position: absolute;
-  top: 0;
+  top: rem(12);
   left: 0;
   width: rem(18);
   height: rem(18);
@@ -26,20 +39,6 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-}
-.sp-nav__item + .sp-nav__item {
-  margin-top: rem(40);
-}
-.sp-nav__item a {
-  display: block;
-  font-size: rem(16);
-  font-weight: $bold;
-  line-height: calc(18 / 16);
-  color: $white;
-}
-
-.sp-nav__sub-item {
-  margin-top: rem(24);
 }
 
 .sp-nav__sub-item > a {
