--- a/src/sass/module/_blog.scss
+++ b/src/sass/module/_blog.scss
@@ -4,9 +4,22 @@
   @include mq("md") {
     position: relative;
     padding-top: rem(100);
+  }
+}
+
+.blog::before {
+  @include mq("md") {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: rem(500);
     background-image: url(../images/top/img-blog-bg.jpg);
     background-repeat: no-repeat;
-    background-size: 100% rem(500);
+    background-size: cover;
+    z-index: -1;
   }
 }
 
