--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -114,4 +114,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+  @media not screen and (min-width: 1265px) {
+    left: 25px;
+  }
 }
