--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -1,6 +1,7 @@
 @use "global" as *;
 
 .campaign-card {
+  display: flex;
   width: rem(280);
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
   @include mq("md") {
@@ -12,27 +13,30 @@
   display: block;
   overflow: hidden;
   transition: opacity 0.3s;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .campaign-card a:hover {
   opacity: $opacity;
 }
 
-.campaign-card__img {
+.campaign-card__img img {
   aspect-ratio: 280 / 188;
+  width: 100%;
+  object-fit: cover;
   @include mq("md") {
     aspect-ratio: 333 / 223;
   }
 }
 
-.campaign-card__img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 .campaign-card__body {
   padding: rem(16) rem(16) rem(24);
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  flex-grow: 1;
   @include mq("md") {
     padding: rem(24) rem(16) rem(40);
   }
@@ -55,14 +59,13 @@
   position: relative;
   margin-top: rem(4);
   padding-bottom: rem(7);
+  width: 100%;
   color: $c-font;
   font-size: rem(16);
   font-weight: $medium;
   line-height: calc(24 / 16);
   border-bottom: rem(2) solid $c-main;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+  flex-grow: 1;
 }
 
 .campaign-card__text {
