--- a/src/sass/module/_about.scss
+++ b/src/sass/module/_about.scss
@@ -1,5 +1,27 @@
 @use "global" as *;
 
+.about {
+  @include mq("md") {
+    position: relative;
+  }
+}
+
+.about::before {
+  @include mq("md") {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: rem(-90);
+    right: calc(50% - min(44.3vw, rem(637.92)));
+    width: rem(194);
+    height: rem(181);
+    background-image: url(../images/top/icon-about-bg.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: 20;
+  }
+}
+
 .about__content-wrap {
   display: contents;
   @include mq("md") {
@@ -105,28 +127,5 @@
   text-align: center;
   @include mq("md") {
     margin-top: rem(40);
-  }
-}
-
-.about__bg-deco {
-  margin: auto;
-  position: relative;
-  width: 100%;
-  max-width: rem(1274);
-  z-index: 30;
-}
-.about__bg-deco::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: rem(-91);
-  right: 0;
-  width: rem(194);
-  height: rem(181);
-  background-image: url(../images/top/icon-about-bg.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  @media not screen and (min-width: 1299px) {
-    right: 25px;
   }
 }
