--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -5,6 +5,22 @@
   background-color: $c-sub;
   @include mq("md") {
     padding-block: rem(100);
+    position: relative;
+  }
+}
+
+.price::before {
+  @include mq("md") {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: rem(60);
+    left: calc(50% - min(43vw, rem(619.2)));
+    width: rem(437);
+    height: rem(201);
+    background-image: url(../images/top/img-price-deco.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 }
 
@@ -92,29 +108,5 @@
   text-align: center;
   @include mq("md") {
     margin-top: rem(80);
-  }
-}
-
-.price__bg-deco {
-  position: relative;
-  margin: auto;
-  max-width: 1240px;
-  z-index: 10;
-}
-
-.price__bg-deco::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: rem(-162);
-  left: 0;
-  width: rem(437);
-  height: rem(201);
-  background-image: url(../images/top/img-price-deco.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  @media not screen and (min-width: 1265px) {
-    left: 25px;
   }
 }
