--- a/src/sass/page/_layout-campaign.scss
+++ b/src/sass/page/_layout-campaign.scss
@@ -3,6 +3,7 @@
 .layout-campaign {
   margin-top: rem(40);
   @include mq("md") {
-    margin-top: rem(120);
+    margin-top: rem(100);
+    padding-top: rem(20);
   }
 }
