--- a/src/sass/module/_blog.scss
+++ b/src/sass/module/_blog.scss
@@ -40,17 +40,14 @@
 
 .blog__items {
   margin-top: rem(28);
-  display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: calc(333 / 345 * 100%);
+  justify-content: center;
   gap: rem(40);
   @include mq("md") {
     margin-top: rem(80);
     grid-template-columns: repeat(3, 1fr);
+    gap: rem(40);
   }
-}
-
-.blog__item {
-  margin: auto;
 }
 
 .blog__button {
