--- a/src/sass/module/_mv.scss
+++ b/src/sass/module/_mv.scss
@@ -61,9 +61,9 @@
   object-fit: cover;
 }
 
-.mv__swiper .swiper-slide-active .mv__img.is-animation,
-.mv__swiper .swiper-slide-duplicate-active .mv__img.is-animation,
-.mv__swiper .swiper-slide-prev .mv__img.is-animation {
+.mv__swiper .swiper-slide-active .mv__img,
+.mv__swiper .swiper-slide-duplicate-active .mv__img,
+.mv__swiper .swiper-slide-prev .mv__img {
   animation: scale 8s linear normal both;
 }
 
