--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -18,9 +18,6 @@ $base-font-family: "Noto Sans JP", sans-serif;
 $second-font-family: "Gotu", sans-serif;
 $third-font-family: "Lato", sans-serif;
 
-body {
-  font-family: $base-font-family;
-}
 
 // フォントウェイト
 $regular: 400;
@@ -39,3 +36,11 @@ $c-font: #0d2936;
 $c-sub: #ddf0f1;
 
 $opacity: 0.7;
+
+
+
+body {
+  color: $c-font;
+  font-family: $base-font-family;
+  font-weight: $regular;
+}
