--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -1,71 +1,49 @@
 @use "global" as *;
 
 .blog-card {
-  width: min(calc(333 / 345 * 100%), 100%);
-  aspect-ratio: 333 / 447;
+  display: flex;
   background-color: $white;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
-  @include mq("md") {
-    width: initial;
-    min-height: 100%;
-  }
 }
 
-.blog-card a {
-  display: block;
+.blog-card__link {
   padding: rem(16) rem(16) rem(24);
-  height: 100%;
   transition: opacity 0.3s;
 }
 
-.blog-card a:hover {
-  opacity: $opacity;
-}
-
-.blog-card__img {
-  aspect-ratio: 301 / 201;
+.blog-card__link:hover {
+  @include mq("md") {
+    opacity: 0.6;
+  }
 }
 
 .blog-card__img img {
+  aspect-ratio: 301 / 201;
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
-.blog-card__body {
-  margin-top: rem(17);
-}
-
 .blog-card__date {
+  margin-top: rem(24);
   display: inline-block;
-  color: $c-font;
+  vertical-align: top;
   font-family: $second-font-family;
   font-size: rem(12);
-  font-weight: $regular;
   line-height: calc(18 / 12);
 }
 
 .blog-card__title {
-  padding-bottom: rem(3);
-  color: $c-font;
+  padding-bottom: rem(3.5);
   font-size: rem(16);
   font-weight: $medium;
   line-height: calc(24 / 16);
-  border-bottom: rem(2) solid $c-main;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
+  border-bottom: rem(1) solid $c-main;
 }
 
 .blog-card__text {
-  margin-top: rem(15);
-  color: $c-font;
+  margin-top: rem(15.5);
+  flex-grow: 1;
+  color: $black;
   font-size: rem(16);
-  font-weight: $regular;
   line-height: calc(24 / 16);
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 5;
-  overflow: hidden;
 }
