--- a/src/sass/module/_loading.scss
+++ b/src/sass/module/_loading.scss
@@ -7,13 +7,17 @@
   width: 100vw;
   height: 100vh;
   background-color: $white;
-  animation: fadeLoading 1.5s forwards 7s;
   z-index: 9000;
+}
+
+.loading.is-loading {
+  animation: fadeLoading 1.5s forwards 2.3s;
 }
 
 @keyframes fadeLoading {
   0% {
     opacity: 1;
+    visibility: visible;
   }
   100% {
     opacity: 0;
@@ -29,16 +33,21 @@
   width: vw(375, 248);
   aspect-ratio: 496 / 133;
   opacity: 0;
-  animation: fadeLogo 2s forwards 0.5s;
+  z-index: 30;
   @include mq("md") {
     width: vw(1440, 496);
   }
+}
+
+.loading.is-loading .loading__logo {
+  animation: fadeLogo 2s forwards 0.3s;
 }
 
 .loading__logo img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  z-index: 20;
 }
 
 @keyframes fadeLogo {
@@ -53,82 +62,5 @@
   100% {
     opacity: 0;
     transform: translate(-50%, -50%);
-  }
-}
-
-.loading__img {
-  position: absolute;
-  top: 0;
-  // width: vw(375, 188);
-  // min-height: 100vh;
-  // aspect-ratio: 188 / 667;
-  width: 50%;
-  height: 100vh;
-  @include mq("md") {
-    // width: vw(1440, 720);
-    // aspect-ratio: 720 / 768;
-  }
-}
-
-.loading__img-left {
-  left: 0;
-  transform: translateY(100%);
-  animation: imgLeft 5s forwards 2.6s;
-}
-
-.loading__img-right {
-  left: 50%;
-  transform: translateY(calc(100% + rem(80)));
-  animation: imgRight 5s forwards 2.6s;
-}
-
-.loading__img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.loading__img-left img {
-  object-position: right top;
-}
-.loading__img-right img {
-  object-position: left top;
-}
-
-@keyframes imgLeft {
-  0% {
-    transform: translateY(100%);
-    opacity: 1;
-  }
-  40% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  50% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 0;
-  }
-}
-
-@keyframes imgRight {
-  0% {
-    transform: translateY(calc(100% + rem(80)));
-    opacity: 1;
-  }
-  45% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  50% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 0;
   }
 }
