--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -1,132 +1,99 @@
 @use "global" as *;
 
 .voice-card {
-  min-height: rem(420);
-  background: $white;
+  display: flex;
+  background-color: $white;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
-  @include mq("md") {
-    min-height: rem(396);
-    aspect-ratio: initial;
-  }
 }
 
-.voice-card a {
-  display: block;
+.voice-card__link {
   padding: rem(15) rem(16) rem(24);
-  height: 100%;
   transition: opacity 0.3s;
   @include mq("md") {
     padding: rem(24);
   }
 }
 
-.voice-card a:hover {
-  opacity: $opacity;
+.voice-card__link:hover {
+  @include mq("md") {
+    opacity: 0.6;
+  }
 }
 
 .voice-card__head {
   display: flex;
-  align-items: flex-start;
+  align-items: end;
 }
 
 .voice-card__content {
-  flex: 0 0 calc(150 / 313 * 100%);
-  @include mq("md") {
-    margin-top: rem(24);
-    flex: 0 0 calc(276 / 472 * 100%);
-  }
+  flex: 1;
 }
 
 .voice-card__meta {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: start;
   @include mq("md") {
     flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
+    align-items: end;
   }
 }
 
-.voice-card__name {
-  color: $c-font;
+.voice-card__tag {
+  display: inline-block;
   font-size: rem(12);
-  font-weight: $regular;
   line-height: calc(18 / 12);
-  @include mq("md") {
-    margin-top: rem(16);
-  }
 }
 
 .voice-card__category {
   padding: rem(3) rem(11);
   color: $c-main;
   font-size: rem(12);
-  font-weight: $regular;
   line-height: calc(22 / 12);
-  border: 1px solid $c-main;
+  border: rem(1) solid $c-main;
   @include mq("md") {
+    margin-left: auto;
     padding: rem(5) rem(15);
   }
 }
 
 .voice-card__title {
-  position: relative;
   margin-top: rem(4);
-  padding-bottom: rem(3);
-  color: $c-font;
+  padding-bottom: rem(3.5);
   font-size: rem(16);
-  font-weight: $medium;
   line-height: calc(23 / 16);
-  border-bottom: rem(2) solid $c-main;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-  overflow: hidden;
+  border-bottom: rem(1) solid $c-main;
   @include mq("md") {
     margin-top: rem(8);
     font-size: rem(24);
+    font-weight: $medium;
     line-height: calc(35 / 24);
-    -webkit-line-clamp: 2;
   }
 }
 
 .voice-card__img {
-  position: relative;
-  margin-top: rem(9);
-  margin-left: auto;
-  flex: 0 0 calc(150 / 313 * 100%);
-  aspect-ratio: 151 / 117;
+  margin-left: rem(13);
+  flex: 0 0 rem(151);
   @include mq("md") {
-    margin-top: 0;
-    flex: 0 0 calc(180 / 472 * 100%);
-    aspect-ratio: 180 / 140;
+    margin-left: rem(16);
+    flex: 0 0 rem(180);
   }
 }
 
 .voice-card__img img {
+  aspect-ratio: 151 / 117;
   width: 100%;
-  height: 100%;
   object-fit: cover;
-}
-
-.voice-card__body {
-  margin-top: rem(15);
   @include mq("md") {
-    margin-top: rem(40);
+    aspect-ratio: 180 / 140;
   }
 }
 
 .voice-card__text {
-  color: $black;
+  margin-top: rem(15);
   font-size: rem(16);
-  font-weight: $regular;
   line-height: calc(24 / 16);
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 10;
-  overflow: hidden;
   @include mq("md") {
-    -webkit-line-clamp: 7;
+    margin-top: rem(39.5);
   }
 }
