--- a/src/sass/module/_voice.scss
+++ b/src/sass/module/_voice.scss
@@ -20,7 +20,7 @@
 .voice::before {
   @include mq("md") {
     top: rem(-120);
-    left: calc(50% - min(43vw, rem(619.2)));
+    left: calc(50% - min((50vw - 25px), rem(620)));
     width: rem(301);
     height: rem(138);
     background-image: url(../images/top/img-voice-deco01.svg);
@@ -30,7 +30,7 @@
 .voice::after {
   @include mq("md") {
     bottom: rem(-67);
-    right: calc(50% - min(37.5vw, rem(540)));
+    right: calc(50% - min((50vw - 25px), rem(540)));
     width: rem(71);
     height: rem(162);
     background-image: url(../images/top/img-voice-deco02.svg);
