--- a/src/sass/module/_about.scss
+++ b/src/sass/module/_about.scss
@@ -12,7 +12,7 @@
     display: block;
     position: absolute;
     bottom: rem(-90);
-    right: calc(50% - min(44.3vw, rem(637.92)));
+    right: calc(50% - min((50vw - 25px), rem(637)));
     width: rem(194);
     height: rem(181);
     background-image: url(../images/top/icon-about-bg.svg);
