--- a/src/sass/module/_blog.scss
+++ b/src/sass/module/_blog.scss
@@ -29,7 +29,7 @@
     display: block;
     position: absolute;
     top: rem(24);
-    left: calc(50% - min(43vw, rem(619.2)));
+    left: calc(50% - min((50vw - 25px), rem(620)));
     width: rem(437);
     height: rem(201);
     background-image: url(../images/top/img-blog-bg-deco.svg);
