--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -15,7 +15,7 @@
     display: block;
     position: absolute;
     bottom: rem(60);
-    left: calc(50% - min(43vw, rem(619.2)));
+    left: calc(50% - min((50vw - 25px), rem(620)));
     width: rem(437);
     height: rem(201);
     background-image: url(../images/top/img-price-deco.svg);
