--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -51,21 +51,21 @@
 }
 
 .contact__border {
-  margin: rem(4) auto 0;
+  margin: rem(5.5) auto 0;
   width: rem(295);
-  height: rem(2);
+  height: 1px;
   background-color: $c-main;
   @include mq("md") {
-    margin-top: rem(7);
+    margin-top: rem(7.5);
     width: 100%;
     max-width: rem(440);
   }
 }
 
 .contact__wrap {
-  margin-top: rem(15);
+  margin-top: rem(15.5);
   @include mq("md") {
-    margin: rem(23) 0 0;
+    margin: rem(23.5) 0 0;
     display: flex;
   }
 }
