--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -1,49 +1,49 @@
 @use "global" as *;
 
 .blog-card {
-  display: flex;
-  background-color: $white;
+  background: $white;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
-.blog-card__link {
+.blog-card a {
   padding: rem(16) rem(16) rem(24);
-  transition: opacity 0.3s;
+  display: block;
 }
 
-.blog-card__link:hover {
+.blog-card a:hover {
   @include mq("md") {
     opacity: 0.6;
   }
 }
 
-.blog-card__img img {
+.blog-card__img {
   aspect-ratio: 301 / 201;
+}
+
+.blog-card__img img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
 .blog-card__date {
   margin-top: rem(24);
-  display: inline-block;
-  vertical-align: top;
+  display: block;
   font-family: $second-font-family;
   font-size: rem(12);
-  line-height: calc(18 / 12);
+  line-height: (18 / 12);
 }
 
 .blog-card__title {
   padding-bottom: rem(3.5);
   font-size: rem(16);
   font-weight: $medium;
-  line-height: calc(24 / 16);
-  border-bottom: rem(1) solid $c-main;
+  line-height: (24 / 16);
+  border-bottom: 1px solid $c-main;
 }
 
 .blog-card__text {
   margin-top: rem(15.5);
-  flex-grow: 1;
-  color: $black;
   font-size: rem(16);
-  line-height: calc(24 / 16);
+  line-height: (24 / 16);
 }
