--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -1,11 +1,25 @@
 @use "global" as *;
 
 .campaign-card {
+  width: rem(280);
+  height: auto;
   background-color: $white;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  @include mq("md") {
+    width: rem(333);
+  }
 }
 
-.campaign-card__link {
+.campaign-card a {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.campaign-card a:hover {
+  @include mq("md") {
+    opacity: 0.6;
+  }
 }
 
 .campaign-card__img img {
@@ -13,15 +27,18 @@
   width: 100%;
   object-fit: cover;
   @include mq("md") {
-    aspect-ratio: 520 / 347;
+    aspect-ratio: 333 / 223;
   }
 }
 
-.campaign-card__body {
+.campaign-card__content {
   padding: rem(16) rem(16) rem(24);
-  background-color: $white;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  flex: 1;
   @include mq("md") {
-    padding: rem(24) rem(24) rem(40);
+    padding: rem(24) rem(16) rem(40);
   }
 }
 
@@ -31,8 +48,8 @@
   vertical-align: top;
   color: $c-main;
   font-size: rem(12);
-  line-height: calc(22 / 12);
-  border: rem(1) solid $c-main;
+  line-height: (22 / 12);
+  border: 1px solid $c-main;
   @include mq("md") {
     padding: rem(5) rem(15);
   }
@@ -41,32 +58,32 @@
 .campaign-card__title {
   margin-top: rem(4);
   padding-bottom: rem(7.5);
+  flex: 1;
+  width: 100%;
   font-size: rem(16);
   font-weight: $medium;
-  line-height: calc(24 / 16);
-  border-bottom: rem(1) solid $c-main;
-  @include mq("md") {
-    padding-bottom: rem(3.5);
-    font-size: rem(24);
-    line-height: calc(35 / 24);
-  }
+  line-height: (24 / 16);
+  border-bottom: 1px solid $c-main;
 }
 
 .campaign-card__text {
   margin-top: rem(7.5);
-  text-align: center;
+  width: 100%;
   font-size: rem(14);
-  line-height: calc(24 / 14);
+  line-height: (24 / 14);
+  text-align: center;
   @include mq("md") {
-    margin-top: rem(23.5);
+    margin-top: rem(15.5);
     font-size: rem(16);
-    line-height: calc(24 / 16);
+    line-height: (24 / 16);
   }
 }
 
 .campaign-card__price-wrap {
   margin-top: rem(8);
+  width: 100%;
   display: flex;
+  align-items: start;
   justify-content: center;
 }
 
@@ -88,10 +105,10 @@
   display: block;
   position: absolute;
   top: 50%;
-  left: 0;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
-  height: rem(3);
+  height: 3px;
   background-color: #c94800;
 }
 
@@ -103,7 +120,7 @@
   font-weight: $bold;
   line-height: 1;
   @include mq("md") {
-    margin-left: rem(40);
+    margin-left: rem(25);
     font-size: rem(40);
   }
 }
