--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -1,20 +1,19 @@
 @use "global" as *;
 
 .voice-card {
-  display: flex;
-  background-color: $white;
+  background: $white;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
-.voice-card__link {
+.voice-card a {
   padding: rem(15) rem(16) rem(24);
-  transition: opacity 0.3s;
+  display: block;
   @include mq("md") {
     padding: rem(24);
   }
 }
 
-.voice-card__link:hover {
+.voice-card a:hover {
   @include mq("md") {
     opacity: 0.6;
   }
@@ -42,16 +41,18 @@
 .voice-card__tag {
   display: inline-block;
   font-size: rem(12);
-  line-height: calc(18 / 12);
+  line-height: (18 / 12);
 }
 
 .voice-card__category {
   padding: rem(3) rem(11);
+  display: inline-block;
   color: $c-main;
   font-size: rem(12);
-  line-height: calc(22 / 12);
-  border: rem(1) solid $c-main;
+  line-height: (22 / 12);
+  border: 1px solid $c-main;
   @include mq("md") {
+    margin-top: 0;
     margin-left: auto;
     padding: rem(5) rem(15);
   }
@@ -59,41 +60,43 @@
 
 .voice-card__title {
   margin-top: rem(4);
-  padding-bottom: rem(3.5);
+  padding-bottom: rem(4);
   font-size: rem(16);
-  line-height: calc(23 / 16);
-  border-bottom: rem(1) solid $c-main;
+  font-weight: $medium;
+  line-height: (23 / 16);
+  border-bottom: 1px solid $c-main;
   @include mq("md") {
     margin-top: rem(8);
     font-size: rem(24);
-    font-weight: $medium;
-    line-height: calc(35 / 24);
+    line-height: (35 / 24);
   }
 }
 
 .voice-card__img {
   margin-left: rem(13);
   flex: 0 0 rem(151);
+  aspect-ratio: 151 / 117;
   @include mq("md") {
     margin-left: rem(16);
     flex: 0 0 rem(180);
-  }
-}
-
-.voice-card__img img {
-  aspect-ratio: 151 / 117;
-  width: 100%;
-  object-fit: cover;
-  @include mq("md") {
     aspect-ratio: 180 / 140;
   }
 }
 
-.voice-card__text {
+.voice-card__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.voice-card__body {
   margin-top: rem(15);
-  font-size: rem(16);
-  line-height: calc(24 / 16);
   @include mq("md") {
-    margin-top: rem(39.5);
+    margin-top: rem(40);
   }
+}
+
+.voice-card__text {
+  font-size: rem(16);
+  line-height: (24 / 16);
 }
