--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -10,20 +10,22 @@
   display: block;
 }
 
-.blog-card a:hover {
-  @include mq("md") {
-    opacity: 0.6;
-  }
-}
-
 .blog-card__img {
   aspect-ratio: 301 / 201;
+  overflow: hidden;
 }
 
 .blog-card__img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: transform 0.3s;
+}
+
+.blog-card a:hover .blog-card__img img {
+  @include mq("md") {
+    transform: scale(1.1);
+  }
 }
 
 .blog-card__date {
