--- a/src/sass/page/_layout-footer.scss
+++ b/src/sass/page/_layout-footer.scss
@@ -7,6 +7,13 @@
   }
 }
 
+.layout-footer--contact {
+  margin-top: rem(144);
+  @include mq('md') {
+    margin-top: rem(120);
+  }
+}
+
 .layout-footer--mt0 {
   margin-top: 0;
   @include mq("md") {
