button ホバー挙動修正

--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -46,11 +46,15 @@
 }
 
 .button:hover::after {
-  background-color: $c-main;
+  @include mq("md") {
+    background-color: $c-main;
+  }
 }
 
 .button--white:hover::after {
-  background-color: $white;
+  @include mq("md") {
+    background-color: $white;
+  }
 }
 
 .button span {
