--- a/src/sass/page/_layout-footer.scss
+++ b/src/sass/page/_layout-footer.scss
@@ -9,7 +9,7 @@
 
 .layout-footer--contact {
   margin-top: rem(144);
-  @include mq('md') {
+  @include mq("md") {
     margin-top: rem(120);
   }
 }
