--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -48,6 +48,7 @@
   display: grid;
   gap: rem(8);
   @include mq("md") {
+    margin-top: rem(80);
     grid-template-columns: repeat(9, 1fr);
     grid-auto-flow: dense;
   }
