--- a/src/sass/page/_layout-contact.scss
+++ b/src/sass/page/_layout-contact.scss
@@ -6,3 +6,10 @@
     margin-top: rem(140);
   }
 }
+
+.layout-contact--top {
+  margin-top: rem(106);
+  @include mq('md') {
+    margin-top: rem(140);
+  }
+}
