--- a/src/sass/module/_sub-mv.scss
+++ b/src/sass/module/_sub-mv.scss
@@ -25,6 +25,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
   color: $white;
   font-weight: $regular;
   font-family: $third-font-family;
