--- a/src/sass/module/_sub-mv.scss
+++ b/src/sass/module/_sub-mv.scss
@@ -4,6 +4,7 @@
   position: relative;
   height: rem(460);
   background-size: cover;
+  background-position: center;
   @include mq("md") {
     height: rem(548);
   }
