--- a/src/sass/module/_sub-contact.scss
+++ b/src/sass/module/_sub-contact.scss
@@ -1,9 +1,9 @@
 @use "global" as *;
 
-.sub-contact__form {
+.sub-contact__inner.inner {
   margin: auto;
-  max-width: rem(480);
+  max-width: rem(510);
   @include mq("md") {
-    max-width: rem(700);
+    max-width: rem(750);
   }
 }
