--- a/src/sass/module/_sub-price.scss
+++ b/src/sass/module/_sub-price.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
-.sub-price__container {
+.sub-price__inner.inner {
   margin-inline: auto;
-  max-width: rem(700);
+  max-width: rem(750);
 }
 
 .sub-price__block:not(:first-child) {
